syntax = "proto3";
import "settings_app.proto";
import "days_forecast.proto";

option java_package = "com.wemaka.weatherapp.store.proto";
option java_multiple_files = true;
option java_outer_classname = "DataStoreProto";

message DataStoreProto {
  SettingsProto settings = 1;
  DaysForecastProto forecast = 2;
}